core/static/css/v2/pages/donate.less
@import "../colors/colors";
@import "../layout/responsive";
@import "../layout/mixins";

.donate-page {
  line-height: 35px;

  .header-section {
    margin-left: 15px;

    .donate-title {
      .font-size(56);
    }

    .highlight {
      color: @primary-color;
    }

    .subtitle {
      color: @bg-red-transparant;
      font-size: 18px;
      padding-bottom: 35px;
    }
  }

  .main-panel {
    padding-bottom: 25px;
  }
  .donate-section {
    .header {
      color: @link-primary;
      font-weight: bold;
      border-top: @grey solid 1px;
      padding-top: 15px;
    }

    .grey-text {
      color: @grey;
    }

    .fellows {
      font-weight: bold;
      span {
        display: inline-block;
        padding-right: 15px;
        .fa {
          padding: 5px 10px 5px 0px;

        }
      }
    }

    .fellowship {
      .cost-label {
        line-height: 18px;
        padding-top: 15px;
        color: @dark-grey;
        .font-size(16);
        font-weight: bold;
      }
      .cost {
        color: @dark-grey;
        .font-size(22);
        font-weight: bold;
      }
      p{
        margin: 0 0 10px 0;
      }
    }
  }
  .founder-section{
    .header {
      padding: 0;
    }
      .founder {
      float: left;
      img {
        height: 150px;
        width: 150px;
        border-radius: 83px;
        float: left;
      }
      p {
        line-height: 25px;
        vertical-align: middle;
        margin-top: 36px;
        padding-left: 30px;
        float: left;
      }
    }
  }
  .side-panel {

    .side-panel-section{
      margin-bottom: 20px;
    }

    p {
      margin: 0px;
      line-height: 30px;
    }
    .header {
      color: @grey;
      font-size: 15px;
      font-weight: bold;
      border-top: @light-grey solid 3px;
      padding-top: 12px;
    }

    .sub-header {
      padding-top: 10px;
      font-weight: bold;
    }

    button {
      border: none;
      outline: none;
      border-radius: 0;
      padding: 5px 30px;
      &.primary {
        background: @primary-color;
        color: @bg-light;
      }
    }

    .gallery-social-icon {
      font-size: 25px;
      padding: 12px;
      padding-left: 0;
    }

    .faq-no-border {
      color: @grey;
      padding-bottom: 10px;
    }

    .faq {
      color: @grey;
      line-height: 38px;
      border-top: @light-grey solid 1px;
      a {
        color: inherit;
      }

      &:last-of-type {
        border-bottom: @light-grey solid 1px;
      }
    }

    .faqs {
      border-bottom: @light-grey solid 3px;
      padding-top: 12px;
      padding-bottom:50px
    }

  }
}

@media (max-width: @screen-xs-max) {
  .gallery-social-icon {
    display: none;
  }
}

